@@ -1,3 +1,8 @@
+2006-10-06 00:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormClassEditor.m: Minor cleanup in handleNotification: 
+	method.
+
 2006-10-05 13:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* English.lproj/GormClassEditor.gorm: Added new gorm file to hold
